Avoid unneeded call to Origin::GetURL from SiteInstance::GetSiteForURL.

Bug: 820070
Change-Id: I61115868be9edf2bb6be1214e7eb4283faf1cf7b
Reviewed-on: https://chromium-review.googlesource.com/956308
Commit-Queue: Łukasz Anforowicz <lukasza@chromium.org>
Reviewed-by: Nick Carter <nick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541986}
Former-commit-id: d926a84917c4b9649c3cd5deb80dfd37279aef66